# python-cookiecutter

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  sonar-project.properties
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __version__.py
